enable specifying schedulers for text-to-image
