# runner/openapi.json
@@ -783,6 +783,11 @@
                         "title": "Num Images Per Prompt",
                         "description": "Number of images to generate per prompt.",
                         "default": 1
+                    },
+                    "scheduler": {
+                        "type": "string",
+                        "title": "Scheduler",
+                        "default": ""
                     }
                 },
                 "type": "object",
